--- a/app/src/main/res/menu/activity_camera.xml
+++ b/app/src/main/res/menu/activity_camera.xml
@@ -14,5 +14,9 @@
         android:id="@+id/menu_take_photo"
         app:showAsAction="always|withText"
         android:title="@string/menu_take_photo"/>
+    <item
+        android:id="@+id/menu_receive"
+        app:showAsAction="ifRoom|withText"
+        android:title="갤러리에서 사진 가져오기"/>
 
 </menu>
